--- a/estilos/style.css
+++ b/estilos/style.css
@@ -16,7 +16,7 @@ body{
 .cabecalho{
     padding: 2% 0 0 15%
 }
-.cabecalho__lista {
+.cabecalho__lista{
 
 
     display: flex;
@@ -28,7 +28,7 @@ body{
 .cabecalho__lista__link{
     font-family: "Montserrat";
     font-weight: 600;
-    font-size: 26px;
+    font-size: 1.5rem;
     text-decoration: none;
     color: #22D4FD;
     
@@ -46,22 +46,25 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap:82px
 }
 
+
+
 .apresentacao__conteudo{
-    width: 615px;
+    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 40px;
 }
 
 .apresentacao__conteudo__titulo{
-    font-size: 36px;
+    font-size: 2.25rem;
     font-family: 'Krona One', sans-serif;
 }
 
 .apresentacao__conteudo__texto{
-    font-size: 24px;
+    font-size: 1.5rem;
     font-family: 'Montserrat', sans-serif;
     color: #34505b;
 }
@@ -78,15 +81,15 @@ body{
 .apresentacao__links__subtitulos{
     font-family: 'Krona one';
     font-weight: 400;
-    font-size: 24px;
+    font-size: 1.5rem;
 }
 
 .apresentacao__links__link{
     background-color:transparent;
-    width: 378px;
+    width: 70%;
     text-align: center;
     border-radius: 8px;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 600;
     padding: 21.5px 0;
     text-decoration: none;
@@ -120,10 +123,16 @@ transform: translate(0, 5px);
 filter: blur(1px); 
 }
 
+.apresentacao__imagem{
+
+    width: 50%;
+
+}
+
 .footer{
     background: linear-gradient(#22d5fdc5, #22D4FD,#22d5fdc5);
     color:#aee6f3;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 400;
     display: flex;
     justify-content: center;
@@ -132,4 +141,26 @@ filter: blur(1px);
     font-family: "Montserrat";
     font-weight: bold;
 
+}
+
+@media (max-width:1200px){
+    
+    .cabecalho{
+        padding: 10%;
+
+    }
+    .cabecalho__lista{
+        justify-content: center;
+
+    }
+    .apresentacao{
+        flex-direction: column-reverse;
+        padding: 5%;
+    }
+    .apresentacao__conteudo{
+        width: auto;
+    }
+    .aprensetacao__imagem{
+        width: auto;
+    }
 }
